Resolve issue #003 with Logo alignment using clear

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    border: 0;
+    border: none;
     box-sizing: border-box;
     font-family: 'Libre Franklin', sans-serif;
 }
@@ -11,17 +11,19 @@ body {
     color: #333;
 }
 
+/* 12/04/23 DMcC : think this is now redundant 
 .navbar {
     color: #fff;
     height: 50x;
-}
+} */
 
-.container {
+/* 12/04/23 DMcC think the below is now redundant */
+/*.container {
     max-width: 1100px;
     margin: 0 auto;
     overflow: auto;
     padding: 0 40px;
-}
+}*/
 
 ul {
     list-style-type: none;
@@ -31,44 +33,47 @@ ul {
 h1,
 h2 {
     font-family: 'Libre Baskerville', serif;
-    margin: 10px 0;
+    /* margin: 10px 0; */
     color: #252525;
 }
 
 /* check if the class below is genuinely needed or could be incorporated into other styling */
-/* think its needed for the grid area and that's it? - think its required OK */
+/* think its needed for the grid area and background colours */
 .header {
     grid-area: hd;
-    background-color: rgb(167, 248, 221);
-    color: #fff;
-    height: 50px;
-}
+    background-color: rgb(96, 239, 191);
+    color: rgba(7, 117, 36, 0.5);
+    line-height:75px;
+    }
 
-#logo {
-    grid-area:hd;
+    #logo {
+        clear:all;
+        text-transform: uppercase;
+    }
+
+    #menu,
+    #logo {
+        line-height: 75px;
+        grid-area: hd;
+        letter-spacing: 4px;
+    }
+    
+    #logo {
     float: left;
-    font-size: 110%;
+    font-size: 180%;
     margin-left: 30px;
-    color: #fff;
-    letter-spacing: 4px;
-}
+    }
 
 #menu {
     font-size: 110%;
-    letter-spacing: 4px;
-}
+    }
 
-#menu,
-#logo {
-    line-height: 50px;
-}
 
 /* navigation links */
 #menu li {
     float: right;
     list-style-type: none;
     margin-right: 30px;
-    color: inherit;
 }
 
 #menu a {
@@ -215,12 +220,13 @@ footer {
     overflow: auto; 
 }
 
-/* Add responsiveness for small screen sizes below 800px width */
+/* Add responsiveness for screen sizes below 800px width */
 @media screen and (max-width: 800px) {
     #photos {
         column-count: 2;}
 
         body {
+            grid-template-columns: 20% auto;
             grid-template-areas: "hd hd"
             "main main"
             "lhside rhside"
@@ -235,7 +241,7 @@ footer {
     }
 }
 
-/* Add flip card functionality sourced from W3schools ref https://www.w3schools.com/howto/howto_css_flip_card.asp*/
+/* Add flip card functionality: sourced from W3schools ref https://www.w3schools.com/howto/howto_css_flip_card.asp*/
 
 .flip-card {
     background-color: transparent;
